# houston

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
app/: package.json
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs
app/src/components/shell/: agent-avatar.tsx
app/src/lib/: analytics.ts
crates/houston-channels/: Cargo.toml
crates/houston-cli/: Cargo.toml
crates/houston-db/: Cargo.toml
crates/houston-events/: Cargo.toml
crates/houston-memory/: Cargo.toml
crates/houston-scheduler/: Cargo.toml
crates/houston-sessions/: Cargo.toml
crates/houston-skills/: Cargo.toml
crates/houston-tauri/: Cargo.toml
crates/keel-db/: Cargo.toml
crates/keel-db/src/: db.rs  lib.rs  migrations.rs
crates/keel-memory/: Cargo.toml
crates/keel-memory/src/: entries.rs  lib.rs  prompt.rs  types.rs
crates/keel-skills/: Cargo.toml
crates/keel-skills/src/: index.rs  lib.rs  remote.rs
crates/keel-tauri/: Cargo.toml
crates/keel-tauri/src/: composio_auth.rs  events.rs  lib.rs  self_improvement.rs  workspace_commands.rs
create-app/: package.json
create-app/template/: index.html  package.json  vite.config.ts
create-app/template/src/: App.tsx  main.tsx
create-app/template/src-tauri/: Cargo.toml  Cargo.toml.template  tauri.conf.json
create-app/template/src-tauri/src/: agent_sessions.rs  channel_routing.rs  commands.rs  lib.rs  memory_commands.rs  skill_commands.rs  workspace.rs
create-app/template/src/components/: channels-tab.tsx  connections-tab.tsx  context-tab.tsx  files-tab.tsx  (+4 more)
showcase/: vite.config.ts
showcase/src/styles/: globals.css
(+12 files in other folders)
