[package]
name = "keel-skills"
version = "0.1.0"
edition = "2021"
description = "Hermes-style self-improving skills for AI agents"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
